--- a/src/styles/blocks/footer.css
+++ b/src/styles/blocks/footer.css
@@ -7,6 +7,7 @@
 		calc((100vw - 1200px) / 2)
 	);
 	border-top: 1px solid var(--color-border-secondary);
+	background-color: var(--color-background-primary);
 
 	@media (width < 520px) {
 		align-content: start;
@@ -21,5 +22,10 @@
 
 	a {
 		color: var(--color-text-action);
+		text-decoration: none;
+
+		&:hover {
+			color: var(--color-text-action-hover);
+		}
 	}
 }
