--- a/src/styles/blocks/header.css
+++ b/src/styles/blocks/header.css
@@ -7,6 +7,7 @@
 		calc((100vw - 1200px) / 2)
 	);
 	border-bottom: 1px solid var(--color-border-secondary);
+	background-color: var(--color-background-primary);
 
 	@media (width < 690px) {
 		grid-template-columns: 48px 1fr;
