--- a/src/styles/blocks/news-article.css
+++ b/src/styles/blocks/news-article.css
@@ -3,6 +3,13 @@
 .news-article {
 	display: grid;
 	row-gap: 1rem;
+	padding-inline: max(
+		1rem,
+		calc((100vw - 1200px) / 2)
+	);
+	padding-block: 1.5rem 2rem;
+	border-bottom: 1px solid var(--color-border-secondary);
+	background-color: var(--color-background-primary);
 
 	@media (width >= 1024px) {
 		grid-template-columns: 1fr 1fr;
@@ -55,6 +62,7 @@
 		display: block;
 		outline: 1px solid var(--color-border-secondary);
 		outline-offset: -1px;
+		border-radius: 0.5rem;
 		background-color: var(--color-background-secondary);
 	}
 }
@@ -73,16 +81,19 @@
 	}
 
 	a {
-		padding: 0.25rem 0.5rem 0.3rem;
+		padding: 0.25rem 0.5rem 0.4rem;
+		min-width: 2rem;
 		border: 1px solid var(--color-border-secondary);
 		border-radius: 1rem;
+		background-color: var(--color-background-secondary);
 		color: inherit;
+		text-align: center;
 		text-decoration: none;
 
 		&:hover {
 			border-color: var(--color-border-action);
 			background-color: var(--color-background-action);
-			color: var(--color-text-action);
+			color: var(--color-text-action-hover);
 		}
 	}
 
