--- a/src/styles/blocks/news-card.css
+++ b/src/styles/blocks/news-card.css
@@ -2,9 +2,10 @@
 
 .news-card {
 	position: relative;
-	display: grid;
-	align-content: start;
-	row-gap: 0.5rem;
+	overflow: hidden;
+	outline: 1px solid var(--color-border-secondary);
+	border-radius: 0.5rem;
+	background-color: var(--color-background-primary);
 
 	&[data-featured] {
 		grid-column: span 2;
@@ -16,11 +17,24 @@
 		}
 	}
 
+	&:hover {
+		outline-color: var(--color-border-action);
+	}
+
 	img {
+		display: block;
 		outline: 1px solid var(--color-border-secondary);
-		outline-offset: -1px;
 		background-color: var(--color-background-secondary);
 	}
+}
+
+/* Content */
+
+.news-card__content	{
+	display: grid;
+	align-content: start;
+	row-gap: 0.5rem;
+	padding: 0.75rem;
 
 	time {
 		color: var(--color-text-secondary);
@@ -51,7 +65,7 @@
 	}
 
 	p {
-		margin: 0.5rem 0 0;
+		margin: 0;
 		line-height: 1.5;
 	}
 }
