--- a/src/styles/blocks/not-found.css
+++ b/src/styles/blocks/not-found.css
@@ -3,6 +3,13 @@
 .not-found {
 	display: grid;
 	row-gap: 1rem;
+	padding-inline: max(
+		1rem,
+		calc((100vw - 1200px) / 2)
+	);
+	padding-block: 1.5rem 2rem;
+	border-bottom: 1px solid var(--color-border-secondary);
+	background-color: var(--color-background-primary);
 }
 
 /* Title */
