Rearrange background colors

--- a/src/styles/blocks/archive.css
+++ b/src/styles/blocks/archive.css
@@ -4,6 +4,7 @@
 	display: grid;
 	row-gap: 2rem;
 	padding-block: 1.5rem 2rem;
+	background-color: var(--color-background-secondary);
 }
 
 /* Section */
