Fill main with secondary background

--- a/src/styles/blocks/index.css
+++ b/src/styles/blocks/index.css
@@ -2,6 +2,7 @@
 
 @import 'page.css';
 @import 'header.css';
+@import 'main.css';
 @import 'news-list.css';
 @import 'news-card.css';
 @import 'news-article.css';
