--- a/src/includes/header.njk
+++ b/src/includes/header.njk
@@ -42,6 +42,12 @@
 			></a>
 		</li>
 		{% endfor %}
-		<li><a data-social="rss" href="/feed/" aria-label="RSS feed"></a></li>
+		<li>
+			<a
+				data-social="rss"
+				href="/feed/"
+				aria-label="RSS feed"
+			></a>
+		</li>
 	</ul>
 </header>
