--- a/src/pages/news/index.njk
+++ b/src/pages/news/index.njk
@@ -3,15 +3,18 @@
 <div class="archive">
 	<div class="archive__section">
 		<header class="archive__header">
-			<h1 class="archive__title">{{ title }}</h1>
+			<h1 class="archive__title">
+				{{ title }}
+			</h1>
 		</header>
 		<ul class="news-list">
-		{%- for item in pagination.items %}
+		{%- for item in newsPage.pagination.items %}
 			<li class="news-list__item">
 				{{ newsCard(news=item, level=2, fetchpriority='high' if loop.index <= 4 else '') }}
 			</li>
 		{%- endfor %}
 		</ul>
+		{% set pagination = newsPage.pagination %}
 		{% include 'pagination.njk' %}
 	</div>
 </div>
