Show magic 8 for related news

--- a/src/includes/related.njk
+++ b/src/includes/related.njk
@@ -8,7 +8,7 @@
 					On that note
 				</h2>
 			</header>
-			<ul class="news-list">
+			<ul class="news-list" data-size="8">
 			{%- for item in news %}
 				<li class="news-list__item">
 					{{ newsCard(news=item, level=3) }}
