--- a/src/layouts/page.njk
+++ b/src/layouts/page.njk
@@ -50,9 +50,9 @@
 <body class="page__body">
 	{% include 'header.njk' %}
 
-	<main class="main">
+	<div class="main">
 		{{ content | safe }}
-	</main>
+	</div>
 
 	{% include 'footer.njk' %}
 </body>
