--- a/src/pages/home/index.njk
+++ b/src/pages/home/index.njk
@@ -1,6 +1,6 @@
 {% from 'news-card.njk' import newsCard %}
 
-<div class="archive">
+<main class="archive">
 	<section class="archive__section">
 		<header class="archive__header">
 			<h2 class="archive__title">
@@ -40,4 +40,4 @@
 		</ul>
 	</section>
 {%- endfor %}
-</div>
+</main>
