--- a/src/pages/news/index.njk
+++ b/src/pages/news/index.njk
@@ -1,6 +1,6 @@
 {% from 'news-card.njk' import newsCard %}
 
-<div class="archive">
+<main class="archive">
 	<div class="archive__section">
 		<header class="archive__header">
 			<h1 class="archive__title">
@@ -17,4 +17,4 @@
 		{% set pagination = newsPage.pagination %}
 		{% include 'pagination.njk' %}
 	</div>
-</div>
+</main>
