Redesign archive counter

--- a/src/pages/home/index.njk
+++ b/src/pages/home/index.njk
@@ -8,7 +8,7 @@
 			</h2>
 			<a class="archive__link" href="/news/">
 				Archive
-				<span>({{ collections.news | length }})</span>
+				<span>{{ collections.news | length }}</span>
 			</a>
 		</header>
 		<ul class="news-list" data-size="8">
@@ -28,7 +28,7 @@
 			</h2>
 			<a class="archive__link" href="/tags/{{ tag }}/">
 				Archive
-				<span>({{ collections[tag] | length }})</span>
+				<span>{{ collections[tag] | length }}</span>
 			</a>
 		</header>
 		<ul class="news-list" data-size="8">
