Feature browser tag

--- a/src/pages/home/index.njk
+++ b/src/pages/home/index.njk
@@ -20,7 +20,7 @@
 		</ul>
 	</section>
 
-{%- for tag in ['html', 'css', 'js', 'a11y'] %}
+{%- for tag in ['html', 'css', 'js', 'a11y', 'browser'] %}
 	<section class="archive__section">
 		<header class="archive__header">
 			<h2 class="archive__title">
