Support HTML in descriptions

--- a/src/includes/news-card.njk
+++ b/src/includes/news-card.njk
@@ -24,8 +24,8 @@
 					{{- news.data.title | markdownInline | safe -}}
 				</a>
 			</h{{ level }}>
-			<p>
-				{{- news.data.description -}}
+			<p class="content-inline">
+				{{- news.data.description | markdownInline | safe -}}
 			</p>
 		</div>
 	</article>
