--- a/src/styles/blocks/index.css
+++ b/src/styles/blocks/index.css
@@ -10,5 +10,6 @@
 @import 'not-found.css';
 @import 'pagination.css';
 @import 'content.css';
+@import 'content-inline.css';
 @import 'search.css';
 @import 'footer.css';
