--- a/src/layouts/news-article.njk
+++ b/src/layouts/news-article.njk
@@ -25,7 +25,7 @@ layout: page.njk
 		alt=alt
 	) }}
 
-	<div class="news-article__content content" data-pagefind-body>
+	<div class="news-article__content content content-inline" data-pagefind-body>
 		{{ content | safe }}
 	{% if links.length == 1 %}
 		<p>
